@@ -11,4 +11,84 @@
 		<module>vanilla-server</module>
 		<module>vanilla-client</module>
 	</modules>
+	<properties>
+		<spring_version>4.3.10.RELEASE</spring_version>
+        <javassist_version>3.20.0-GA</javassist_version>
+        <netty_version>3.2.5.Final</netty_version>
+        <netty4_version>4.0.35.Final</netty4_version>
+        <mina_version>1.1.7</mina_version>
+        <grizzly_version>2.1.4</grizzly_version>
+        <httpclient_version>4.5.3</httpclient_version>
+        <hessian_lite_version>3.2.1-fixed-2</hessian_lite_version>
+        <xstream_version>1.4.1</xstream_version>
+        <fastjson_version>1.2.31</fastjson_version>
+        <bsf_version>3.1</bsf_version>
+        <sorcerer_version>0.8</sorcerer_version>
+        <zookeeper_version>3.4.9</zookeeper_version>
+        <zkclient_version>0.2</zkclient_version>
+        <curator_version>2.12.0</curator_version>
+        <jedis_version>2.9.0</jedis_version>
+        <xmemcached_version>1.3.6</xmemcached_version>
+        <cxf_version>3.0.14</cxf_version>
+        <thrift_version>0.8.0</thrift_version>
+        <jfreechart_version>1.0.13</jfreechart_version>
+        <hessian_version>4.0.38</hessian_version>
+        <servlet_version>2.5</servlet_version>
+        <jetty_version>6.1.26</jetty_version>
+        <validation_version>1.1.0.Final</validation_version>
+        <hibernate_validator_version>5.4.1.Final</hibernate_validator_version>
+        <jel_version>3.0.1-b08</jel_version>
+        <jcache_version>1.0.0</jcache_version>
+        <sca_version>2.0-M5.1</sca_version>
+        <guice_version>3.0</guice_version>
+        <cglib_version>2.2</cglib_version>
+        <webx_version>3.1.6</webx_version>
+        <velocity_version>1.7</velocity_version>
+        <!-- Log libs -->
+        <slf4j_version>1.7.25</slf4j_version>
+        <jcl_version>1.2</jcl_version>
+        <log4j_version>1.2.16</log4j_version>
+        <logback_version>1.2.2</logback_version>
+        <!-- Test libs -->
+        <junit_version>4.12</junit_version>
+        <easymock_version>3.4</easymock_version>
+        <jmockit_version>1.33</jmockit_version>
+        <!-- Build args -->
+        <!-- <argline>-server -Xms64m -Xmx256m -XX:PermSize=64m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8
+            -Djava.net.preferIPv4Stack=true
+        </argline> -->
+        <skip_maven_deploy>false</skip_maven_deploy>
+        <updateReleaseInfo>true</updateReleaseInfo>
+        <project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
+
+        <profile.name>oss</profile.name>
+
+        <!-- for maven compiler plugin -->
+        <file_encoding>UTF-8</file_encoding>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.18</version>
+		</dependency>
+	</dependencies>
+	
+	<build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.2</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                        <encoding>UTF-8</encoding>
+                        <showWarnings>true</showWarnings>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
